manifests/epinio-ui-1.7.2.tgz-manifest.yaml
---
# Source: epinio-ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: epinio-ui
  namespace: default
  labels:
    helm.sh/chart: epinio-ui-1.7.2
    app.kubernetes.io/name: epinio-ui
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.7.1-0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: epinio-ui
    app.kubernetes.io/instance: my-release
  ports:
  - name: ui
    port: 80
    targetPort: 8000
---
# Source: epinio-ui/templates/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epinio-ui
  namespace: default
  labels:
    helm.sh/chart: epinio-ui-1.7.2
    app.kubernetes.io/name: epinio-ui
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.7.1-0.0.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: epinio-ui
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        helm.sh/chart: epinio-ui-1.7.2
        app.kubernetes.io/name: epinio-ui
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "v1.7.1-0.0.1"
        app.kubernetes.io/managed-by: Helm
    spec:
      containers:
      - name: epinio-ui
        image: ghcr.io/epinio/epinio-ui:v1.7.1-0.0.1
        imagePullPolicy: IfNotPresent
        workingDir: /db

        volumeMounts:
        - mountPath: /tmp
          name: tmp
          readOnly: false
        - mountPath: /db
          name: db
          readOnly: false

        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - emptyDir: {}
        name: tmp
      - emptyDir: {}
        name: db
---
# Source: epinio-ui/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    helm.sh/chart: epinio-ui-1.7.2
    app.kubernetes.io/name: epinio-ui
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "v1.7.1-0.0.1"
    app.kubernetes.io/managed-by: Helm
  name: epinio-ui
  namespace: default
spec:
  rules:
  - host: ui.epinio.dev
    http:
      paths:
      - backend:
          service:
            name: epinio-ui
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - ui.epinio.dev
    secretName: epinio-ui-tls
